@@ -61,13 +61,19 @@ jQuery(document).ready(function($) {
                 var effect = 'slide';
                 var current_class = "current";
                 var initial_index = 0;
+                var initial_indexes = [];
                 var $pane = $el.find('.pane');
 
                 $el.find('.eea-accordion-title, h2').each(function(idx){
-                    var $el = $(this);
-                    if( $el.hasClass('current') ){
-                        $el.removeClass('current');
+                    var $title = $(this);
+                    if( $title.hasClass('current') ){
+                        $title.removeClass('current');
                         initial_index = idx;
+                        initial_indexes.push(idx);
+
+                        // Can't be collapsed-by-default and have an open pane
+                        // by default. Cleanup misconfiguration
+                        $el.removeClass('collapsed-by-default');
                     }
                 });
 
@@ -102,7 +108,8 @@ jQuery(document).ready(function($) {
 
                 $el.tabs($pane,
                 {   tabs: '.eea-accordion-title, h2',
-                    effect: effect, initialIndex: initial_index,
+                    effect: effect,
+                    initialIndex: initial_index,
                     current: current_class,
                     onBeforeClick: function(ev, idx) {
                         // allows third party applications to hook into these 2 event handlers
@@ -111,8 +118,28 @@ jQuery(document).ready(function($) {
                     onClick: function(ev, idx) {
                         $(ev.target).trigger("eea-accordion-on-click", { event: ev, index: idx});
                     }
+                });
+
+                // Allow multiple open-by-default panes
+                if(initial_indexes.length && $el.hasClass('non-exclusive')) {
+                  $el.find('.eea-accordion-title, h2').each(function(idx){
+                    var $title = $(this);
+
+                    // Nothing to do
+                    if( $title.hasClass('current') ){
+                      return;
+                    }
+
+                    // Not open-by-default
+                    if(initial_indexes.indexOf(idx) === -1){
+                      return;
+                    }
+
+                    // Open
+                    $title.click();
+                  });
                 }
-                );
+
             });
 
         }
