@@ -7,7 +7,8 @@ Changelog
   the tabs logic isn't executed because of a javascript error
   [ichimdav refs #19315]
 * Feature: SEO, link EEA content with G+ publisher markup.
-* Feature: Non-exclusive accordion default open panel
+* Feature: Accordion default open panels by adding CSS class 'current'. Also
+  support multiple open-by-default panels for non-exclusive accordions
   [voineali refs #19056]
 * Feature: Added robots meta tag in <head> to disallow search
   engines to index "public draft" states (visible only with direct link).
